# FirstCreatingMyProgrammingLanguage

./: .clang-format  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  TokenType.h  main.cpp
ast/: BinaryExpression.cpp  BinaryExpression.h  IExpression.h  NumberExpression.cpp  NumberExpression.h  UnaryExpression.cpp  UnaryExpression.h  WordExpression.cpp  WordExpression.h
